--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-sequence": "^0.3.2",
     "gulp-sourcemaps": "^1.5.0",
+    "gulp-template-compile": "^1.0.0",
     "gulp-uglifyjs": "^0.6.0",
     "gulp-wrap": "^0.11.0",
     "yargs": "^3.4.5"
